Fix color of branding line on mobile (#1373)
* Fix color of branding line on mobile

* Disable config sunflower_design_switcher_panel if design switcher is disabled

--- a/sass/_generic.scss
+++ b/sass/_generic.scss
@@ -214,14 +214,14 @@ body.formstyle-sharp {
         .brand-left {
             left: initial;
             right: 0;
-            margin: 17px 33px !important;
+            margin: 17px 33px;
 
             @include media-breakpoint-down(xl) {
-                margin: 14px 33px !important;
+                margin: 14px 33px;
             }
 
             @media (max-width: 1200px) {
-                margin: 7px 33px !important;
+                margin: 7px 33px;
             }
         }
     }
@@ -233,7 +233,7 @@ body.formstyle-sharp {
             .brand-left {
                 right: initial;
                 left: 0;
-                margin: 5px 110px 7px 40px !important;
+                margin: 10px 110px 7px 40px;
             }
         }
     }
@@ -321,12 +321,18 @@ body.formstyle-sharp {
                 height: calc(100vh - 70px) !important;
             }
 
-            @include media-breakpoint-down(md) {
-                max-height: none;
+            @media (max-width: 1200px) {
+                margin-top: 70px !important;
             }
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
+                display: block !important;
+                height: auto !important;
+                min-height: 0 !important;
                 max-height: none;
+                margin: 0 calc(-1 * var(--grid-margin)) !important;
+                width: calc(100% + var(--double-grid-margin)) !important;
+                overflow: hidden;
             }
 
 
@@ -345,11 +351,7 @@ body.formstyle-sharp {
                 z-index: 1;
                 height: 100%;
                 background: linear-gradient(to top, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0) 100%) !important;
-                pointer-events: none; /* verhindert, dass der Overlay Klicks blockiert */
-            }
-
-            @media (max-width: 1200px) {
-                margin-top: 70px !important;
+                pointer-events: none;
             }
 
             .wp-block-cover__image-background {
@@ -358,6 +360,12 @@ body.formstyle-sharp {
                 height: 100%;
                 position: relative;
                 z-index: 0;
+
+                @include media-breakpoint-down(md) {
+                    height: auto !important;
+                    min-height: 0 !important;
+                    object-fit: contain !important;
+                }
             }
 
 
@@ -371,6 +379,10 @@ body.formstyle-sharp {
 
                 @include media-breakpoint-down(md) {
                     margin-bottom: 0;
+                    inset: 0 !important;
+                    display: flex !important;
+                    align-items: center !important;
+                    justify-content: center !important;
                 }
 
                 .wp-block-buttons {
@@ -516,8 +528,12 @@ body.formstyle-sharp {
 
     .entry-content > .wp-block-cover:first-child {
         margin: 80px 0 var(--half-block-spacing) 0 !important;
-        width: calc((100% + var(--double-grid-margin))) !important;
-        left: calc(-1 * var(--grid-margin)) !important;
+        left: 0 !important;
+
+        .wp-block-cover__image-background {
+            margin: 0 calc(-1 * var(--grid-margin));
+            width: calc(100% + var(--double-grid-margin));
+        }
     }
 
 
@@ -526,10 +542,11 @@ body.formstyle-sharp {
         .entry-content > .wp-block-cover.is-style-sunflower-hero:first-child {
             margin: 100px 0 var(--half-block-spacing) 0 !important;
             height: calc(100vh - 180px) !important;
-        }
 
-        .entry-content > .wp-block-cover:first-child {
-            margin: 100px 0 var(--half-block-spacing) 0 !important;
+            @include media-breakpoint-down(md) {
+                height: auto !important;
+                min-height: 0 !important;
+            }
         }
     }
 
